# automaton-rules

./: Cargo.toml  LICENSE  README.md  runInTerminal.sh  runWithGraphics.sh
resources/: deterministic_game_of_life.txt  game_of_life.txt  gravity.txt  virus.txt
resources/tests/: compiler_benchmark.txt  lexer_benchmark_nice.txt  lexer_benchmark_ugly.txt  lexer_id_with_illegal_char.txt  lexer_number_with_alphabetic.txt  lexer_number_with_illegal_char.txt  lexer_number_with_two_dots.txt  lexer_operator_typo.txt  parser_benchmark.txt  parser_condition_error.txt  parser_expected_comparison_operator.txt  parser_expected_delay.txt  parser_expected_identifier.txt  parser_expected_is_token.txt  parser_expected_neighbor_number.txt  parser_expected_positive_usize.txt  parser_expected_proportion.txt  parser_expected_u8.txt  parser_expected_usize.txt  parser_next_condition_error.txt  parser_no_states_keyword.txt  semantic_box_errors.txt  semantic_condition_undefined_state.txt  semantic_no_states.txt  semantic_quantities_too_much.txt  semantic_several_errors.txt  semantic_transition_undefined_state.txt  semantic_true_error.txt  semantic_two_default_states.txt  semantic_wrong_proportions.txt
src/: automaton.rs  camera.rs  display.rs  executor.rs  inputs.rs  lib.rs  main.rs  perf.rs  rendy_display.rs  terminal_display.rs  wgpu_display.rs
src/compiler/: lexer.rs  mod.rs  parser.rs  semantic.rs
