[package]
name = "mutations"
version = "0.1.0"
authors = ["cppIsTheBest <hugo.boulanger@etu.enseeiht.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
termion = "1.5.5"
rand = "0.7.3"
rayon = "1.3.0"
