[package]
name = "mutations"
version = "0.1.0"
authors = ["cppIsTheBest <hugo.boulanger@etu.enseeiht.fr>"]
edition = "2018"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "perf"
path = "src/perf.rs"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
termion = "1.5.5"
rand = "0.7.3"
rayon = "1.3.0"
