[package]
name = "mutations"
version = "0.1.0"
authors = ["cppIsTheBest <hugo.boulanger@etu.enseeiht.fr>"]
edition = "2018"
default-run = "main"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
termion = "1.5.5"
rand = "0.7.3"
rayon = "1.3.0"
wgpu = { version = "0.5.2", optional = true }
futures = { version = "0.3.5", optional = true }
winit = { version = "0.22.2", optional = true }

[features]
wgpu_rendering = ["wgpu", "winit", "futures"]
